<resources>
    <string name="app_name">Magic Fridge</string>
    <string name="action_settings">Settings</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication error, Please enter a valid email and password or sign up</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_login">Already have an account</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_email">Enter a valid email.</string>
    <string name="err_msg_required">Required !!</string>
    <string name="err_msg_password">Enter a valid password with min 6 characters.</string>
    <string name="btn_link_to_signup">Don\'t have an account, Signup</string>
    <string name="all_deleted">All Deleted !!</string>
    <string name="are_you_sure">Want to Delete ??</string>
    <string name="dialog_single_button">Create</string>
    <string name="enter_listItem_text">Enter Item !!</string>
    <string name="logOut">Log Out</string>
    <string name="facebook_app_id">299538340535293</string>
    <string name="fb_login_protocol_scheme">fb299538340535293</string>

    <!-- Strings related to login -->
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login2">Sign in</string>
    <string name="title_activity_menu">Magic Frig</string>
    <string name="title_home">My Fridge</string>
    <string name="title_shopping">Adding Grocery</string>
    <string name="title_account">My Account</string>

    <string name="refrigerator">refrigerator</string>
    <string name="freezer">freezer</string>
    <string name="tag2Name">refrigerator or freezer</string>
    <string name="all">all</string>
    <string name="tag1Name">tag Name</string>
    <string name="expiration_tag">Food expires in</string>

    <string name="location">Location: </string>
    <string name="type">Type tag: </string>
    <string name="expiration_length">Length of expiration: </string>
    <string name="expiration_duration">Expiration duration (Days):</string>
    <!-- Strings related to refrigerator -->
    <string-array name="names">
        <item>Apple</item>
        <item>Steak</item>
        <item>Skim Milk</item>
    </string-array>

    <string-array name="expiration_duration">
        <item>14</item>
        <item>20</item>
        <item>10</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
